# lemondefr-lite

./: .gitignore  README.md  lemondefr.lite  pyproject.toml
data/: patch-grostitres.sql  schema-grostitres.sql
data/lemondefr-unes-elections2017-wa-html/: index_lemonde_20170129021749.html  index_lemonde_20170129061749.html  index_lemonde_20170129103404.html  index_lemonde_20170129143457.html  index_lemonde_20170129183546.html  index_lemonde_20170129223633.html  index_lemonde_20170130023724.html  index_lemonde_20170130063819.html  index_lemonde_20170130111757.html  index_lemonde_20170130191950.html  index_lemonde_20170130232036.html  index_lemonde_20170131032127.html  index_lemonde_20170131072219.html  index_lemonde_20170131115239.html  index_lemonde_20170131155306.html  index_lemonde_20170131195321.html  index_lemonde_20170131235347.html  index_lemonde_20170201035408.html  index_lemonde_20170201124206.html  index_lemonde_20170201164228.html  index_lemonde_20170201204249.html  index_lemonde_20170202004323.html  index_lemonde_20170202044328.html  index_lemonde_20170202133019.html  index_lemonde_20170202173039.html  index_lemonde_20170203013131.html  index_lemonde_20170203053151.html  index_lemonde_20170203093211.html  index_lemonde_20170203215712.html  index_lemonde_20170204015812.html  index_lemonde_20170204144400.html  index_lemonde_20170204184422.html  index_lemonde_20170204224438.html  (+317 more)
lemondefr_culture/: lemondefr_crawl.sh  lemondefr_wa_collections.txt  lemondefr_wa_snaps.txt
lemondefr_lite/: allume_lemonde.py
tests/: test_cuisine.py  test_ustenciles.py
(+1 files in other folders)
